--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "node": "10.14.1"
   },
   "dependencies": {
+    "babylon": "^6.18.0",
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-router-sitemap": "^1.2.0",
+    "react-scripts": "^2.1.3",
     "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
+    "build:sitemap": "cross-env NODE_ENV=production babel-node build-sitemap.js --presets=env,react,stage-2",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,5 +33,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "sitemap": "^2.1.0"
+  }
 }
